# radical.pilot

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  3.8. Sharing Task Input Data.ipynb  CHANGES.md  CITATION.cff  LICENSE.md  MANIFEST.in  Makefile  README.dragon  README.md  TODO  VERSION  architecture.graffle  data_unit_life_cycle.txt  deployment_arch.graffle  environment.yml  issue_template.md  pyproject.toml  radical.pilot.sublime-project  requirements-ci.txt  requirements-devel  requirements-docs-ci.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  saga-pilot.sublime-project  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/actions/: run-rp-notebook.yml
HiComb_Template/: README  README.md  getting_started_HiComb.py  input_file.txt
benchmark/: benchmark.py  redis_vs_mongodb.py  redis_vs_mongodb.py.result  results.md
benchmarks/: benchmark.py  benchmark_driver.py  redis_vs_mongodb.py  redis_vs_mongodb.rb  redis_vs_mongodb.rb.result  results.md  run_benchmark_series.sh  string.json  test.json
ci-scripts/: docker-monolithic.sh  docker-stack.sh
concepts/: README.md  component_termination.py  deployment_arch.graffle  registry.txt
configs/: archer.json  futuregrid.json  local.json  xsede.json
doc/: Makefile  api.py  datamodel.json  deployment_arch.graffle  input.json  results.json  security  security.txt
docker/: Dockerfile  README.md  compose.yml  radicalpilot.dockerfile  rp-complete.dockerfile  stack.yml
docs/: Makefile
examples/: 00_getting_started.py  01_task_details.py  01_unit_details.py  02_failing_tasks.py  02_failing_units.py  03_multiple_pilots.py  04_scheduler_selection.py  05_task_input_data.py  05_unit_input_data.py  06_task_output_data.py  06_unit_output_data.py  07_shared_task_data.py  07_shared_unit_data.py  08_task_environment.py  08_unit_environment.py  09_mpi_task_function.py  09_mpi_tasks.py  09_mpi_tasks.sh  09_mpi_units.py  09_mpi_units.sh  10_pre_and_post_exec.py  11_task_input_data_tar.py  11_task_input_folder.py  11_unit_input_data_tar.py  11_unit_input_folder.py  12_partitions.py  12_task_env.py  12_task_function.py  12_task_function_1.py  12_task_function_2.py  12_unit_function.py  12_unit_function_1.py  12_unit_function_2.py  12_unit_function_v2.py  13_task_env.py  README.md  agent_services.py  agent_services_example.py  backfilling.py  backfilling_recovery.py  (+54 more)
experiments/: rp_paper_experiment.py  rp_paper_experiment_1.py  rp_paper_experiment_2.py  rp_paper_experiment_3.py  rp_paper_experiment_4.py
old_tests/: test_hombre_scheduler.py  test_ordered_scheduler_int.py
performance-measurements/: saga_pilot_perf_test.py
report/: index.html
sinon/: __init__.api.py  __init__.py  __init__.v1.py
test_cases/: results.am
tests/: README  STDOUT  agent_1.cfg  agent_2.cfg  antons-test.py  archer_test.py  connection_drops.py  copyfiles.py  eq0.inp  go_test.py  helloworld_mpi.py  issue104.py  issue114_3.py  issue124.py  issue133.py  issue165.py  issue172.py  issue286.py  issue286.txt  issue359.py  issue503.py  issue57.py  issue79.py  issue87.py  issue88.py  issue_104.py  issue_114_3.py  issue_124.py  issue_133.py  issue_165.py  issue_172.py  issue_258.py  issue_286.txt  issue_359.py  issue_450.py  issue_503.py  issue_57.py  issue_572.py  issue_79.py  issue_87.py  (+74 more)
tools/: dump_db.py
(+1886 files in other folders)
